Fixed wrapping

--- a/src/styles/base/page.scss
+++ b/src/styles/base/page.scss
@@ -17,7 +17,6 @@ body{
 
 main{
 	background-color: $mainBackgroundColor;
-	min-width: $wrapperWidth;
 	display: flex;
 	flex-direction: column;
 	flex-grow: 1;
