--- a/src/styles/components/footer.scss
+++ b/src/styles/components/footer.scss
@@ -1,3 +1,8 @@
 .footer{
 	background: #ddd;
+	&__url{
+		@include below(650px){
+			display: none;
+		}
+	}
 }
